argoCD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cj-app-service
  namespace: default  # ✅ 동일 네임스페이스
  labels:
    app: cj-app
spec:
  selector:
    app: cj-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
