argoCD/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cj-app-virtualservice
  namespace: default
spec:
  hosts:
    - "aac388af20c9f4e36b544924dc9a6d71-138808423.ap-northeast-2.elb.amazonaws.com"
  gateways:
    - cj-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cj-app-service.default.svc.cluster.local  # 서비스 이름 (Namespace 포함)
            port:
              number: 80
